force-app/main/default/objects/Credit_PreAuthorization__c/Credit_PreAuthorization__c.object-meta.xml
<CustomObject>
    <label>Credit PreAuthorization</label>
    <nameField>
        <label>Credit PreAuthorization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit PreAuthorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>