force-app/main/default/objects/Credit_PreAuthorization__c/fields/Billing_Month_Year_of_Original_Charge__c.field-meta.xml
<CustomField>
    <fullName>Billing_Month_Year_of_Original_Charge__c</fullName>
    <label>Billing Month Year of Original Charge</label>
    <length>4</length>
    <type>Text</type>
</CustomField>