force-app/main/default/objects/Credit_PreAuthorization__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit PreAuthorizations</relationshipLabel>
    <relationshipName>Credit_PreAuthorizations</relationshipName>
    <type>Lookup</type>
</CustomField>