force-app/main/default/objects/Credit_PreAuthorization__c/fields/Creators_Manager__c.field-meta.xml
<CustomField>
    <fullName>Creators_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creators Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_PreAuthorizations</relationshipName>
    <type>Lookup</type>
</CustomField>