force-app/main/default/objects/Credit_PreAuthorization__c/fields/Credit_Request_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Request_Amount__c</fullName>
    <label>Credit Request Amount</label>
    <precision>11</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>