force-app/main/default/objects/Credit_PreAuthorization__c/fields/Customer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Name__c</fullName>
    <label>Customer Contact Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>