force-app/main/default/objects/Credit_PreAuthorization__c/fields/Date_of_Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Initial_Contact__c</fullName>
    <label>If Yes, Date of Initial Contact?</label>
    <type>Date</type>
</CustomField>