force-app/main/default/objects/Credit_PreAuthorization__c/fields/Did_Customer_Initiate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Did_Customer_Initiate_Contact__c</fullName>
    <label>Did Customer Initiate Contact?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>