force-app/main/default/objects/Credit_PreAuthorization__c/fields/Does_a_Contract_Exist_for_this_Service__c.field-meta.xml
<CustomField>
    <fullName>Does_a_Contract_Exist_for_this_Service__c</fullName>
    <label>Does a Contract Exist for this Service?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>