force-app/main/default/objects/Credit_PreAuthorization__c/fields/Has_Issue_been_Permanently_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Has_Issue_been_Permanently_Resolved__c</fullName>
    <label>Has Issue been Permanently Resolved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>