force-app/main/default/objects/Credit_PreAuthorization__c/fields/Is_this_a_Good_Will_Credit__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Good_Will_Credit__c</fullName>
    <label>Is this a Good Will Credit?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>