force-app/main/default/objects/Credit_PreAuthorization__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <label>Justification</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>