force-app/main/default/objects/Credit_PreAuthorization__c/fields/Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <label>Sales Territory</label>
    <type>Text</type>
</CustomField>